<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Runs Counter</string>
    <string name="rcb" translatable="false">RCB</string>
    <string name="four">Four</string>
    <string name="_01" tools:ignore="MissingTranslation">0</string>
    <string name="six" tools:ignore="MissingTranslation">Six</string>
    <string name="one" translatable="false">One</string>
    <string name="csk" translatable="false">CSK</string>
    <string name="_02" translatable="false">0</string>
    <string name="four2" translatable="false">Four</string>
    <string name="six2" translatable="false">Six</string>
    <string name="one2" translatable="false">One</string>
    <string name="reset" translatable="false">Reset</string>
</resources>
