<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="434dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvteam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/rcb"
                android:textColor="#D50000"
                android:textColorHighlight="#D50000"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:fontFamily="casual" />

            <TextView
                android:id="@+id/rcbruns"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:text="@string/_0"
                android:textColorHighlight="#D50000"
                android:textSize="72sp" />

            <Button
                android:id="@+id/rcbfour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/btn_shape"
                android:onClick="setBrcbfour"
                android:text="@string/four"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rcbsix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/btn_shape"
                android:onClick="setBrcbsix"
                android:text="@string/six"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rcbone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/btn_shape"
                android:onClick="setBrcbone"
                android:text="@string/one"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="432dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvteam2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/csk"
            android:textColor="#FFFF00"
            android:textColorHighlight="#D50000"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:fontFamily="casual" />

        <TextView
            android:id="@+id/cskruns"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/_0"
            android:textColorHighlight="#D50000"
            android:textSize="72sp" />

        <Button
            android:id="@+id/cskfour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/btn_shape_yellow"
            android:onClick="setBcskfour"
            android:text="@string/four"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/csksix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/btn_shape_yellow"
            android:onClick="setBcsksix"
            android:text="@string/six"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cskone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/btn_shape_yellow"
            android:onClick="setBcskone"
            android:text="@string/one"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="450dp">

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10sp"
            android:layout_marginTop="400dp"
            android:background="@drawable/btn_black"
            android:onClick="setreset"
            android:text="@string/reset"
            android:textColor="#F7EDED"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>


